--- a/final/index.html
+++ b/final/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JavaScript Numbers</title>
+    <title>JavaScript Numbers – Challenge</title>
     <link href="css/style.css" rel="stylesheet"> 
   </head>
   <body>
     <main></main>
-    <script src="js/math.js"></script>  
+    <script src="js/random.js"></script>   
   </body>
 </html>
